# pico-bootstrap

./: .gitignore  Makefile  README.md
cmake/: pico_sdk_import.cmake
docs/: new-project.md
examples/led_toggle/: CMakeLists.txt  main.cpp
examples/led_toggle_rtos/: CMakeLists.txt  FreeRTOSConfig.h  main.cpp
examples/uart_hello/: CMakeLists.txt  main.cpp
templates/: CMakeLists.txt  Makefile
templates/src/: main.cpp
tools/: identify.sh  scaffold.sh
